--- a/index.html
+++ b/index.html
@@ -22,11 +22,10 @@
       </div>
       <div class="flex items-center gap-4">
         <a href="#projects" class="text-sm hover:underline">Projects</a>
+        <a href="#experience" class="text-sm hover:underline">Experience</a>
         <a href="#skills" class="text-sm hover:underline">Skills</a>
-        <a href="#contact" class="text-sm hover:underline">Contact</a>
-        <a href="https://github.com/mhmmd.shadil" target="_blank" class="ml-3 inline-flex items-center gap-2 px-3 py-2 rounded-2xl bg-white/4 backdrop-blur-sm border border-white/6">
-          <i data-lucide="github" class="w-4 h-4"></i> GitHub
-        </a>
+        <a href="#education" class="text-sm hover:underline">Education</a>
+        <a href="#resume" class="text-sm hover:underline">Resume</a>
       </div>
     </nav>
   </header>
@@ -40,21 +39,19 @@
           Muhammed Shadil MP
         </h1>
         <p class="text-gray-300 max-w-xl">
-          19, IT student who builds clean, fast, Apple-inspired interfaces. Learning full-stack & open-source, one project at a time.
+          I’m an IT student passionate about minimal design, clean interfaces, and building meaningful digital tools. Whether coding, designing in Figma, or organizing workflows in Notion, I enjoy turning ideas into polished digital experiences.
         </p>
 
         <div class="flex items-center gap-4">
           <a href="https://github.com/mhmmdshadil" target="_blank" class="inline-flex items-center gap-3 px-5 py-3 rounded-2xl bg-white/6 border border-white/8 hover:translate-y-[-2px] transition-transform">
-            <i data-lucide="github" class="w-4 h-4"></i> View GitHub
+            <i data-lucide="github" class="w-4 h-4"></i> GitHub
           </a>
           <a href="mailto:muhammedshadilmp7@gmail.com" class="inline-flex items-center gap-3 px-5 py-3 rounded-2xl bg-transparent border border-white/8 hover:bg-white/3 transition">
-            <i data-lucide="mail" class="w-4 h-4"></i> Email Me
+            <i data-lucide="mail" class="w-4 h-4"></i> Email
           </a>
-        </div>
-
-        <div class="flex items-center gap-3 text-sm text-gray-400">
-          <div class="w-1 h-6 rounded bg-gradient-to-b from-pink-400 to-violet-400"></div>
-          <span>Currently learning: React, Tailwind, UI design patterns.</span>
+          <a href="#resume" class="inline-flex items-center gap-3 px-5 py-3 rounded-2xl bg-white/6 border border-white/8 hover:translate-y-[-2px] transition-transform">
+            <i data-lucide="file-text" class="w-4 h-4"></i> Resume
+          </a>
         </div>
       </div>
 
@@ -65,98 +62,146 @@
                class="w-32 h-32 rounded-2xl object-cover shadow-md ring-1 ring-white/8"/>
           <div class="mt-4 text-center">
             <div class="font-semibold">Muhammed Shadil MP</div>
-            <div class="text-xs text-gray-300">IT — Government Engineering College Sreekrishnapuram</div>
+            <div class="text-xs text-gray-300">IT — Govt. Engineering College Sreekrishnapuram</div>
+            <div class="text-xs text-gray-400 mt-1">Kerala, India</div>
           </div>
         </div>
       </div>
     </section>
 
-    <!-- PROJECTS -->
-    <section id="projects" class="mt-16">
-      <h2 class="text-2xl font-bold">Projects</h2>
-      <p class="text-gray-400 mt-2">Highlights from my GitHub and college work.</p>
+    <!-- RESUME SECTION -->
+    <section id="resume" class="mt-16">
+      <h2 class="text-2xl font-bold">Resume</h2>
+      <p class="text-gray-400 mt-2">View or download my full resume.</p>
+
+      <div class="mt-6">
+        <a href="https://raw.githubusercontent.com/mhmmdshadil/portfolio-website/main/Black%20White%20Minimalist%20CV%20Resume%20(4).pdf" 
+           download 
+           class="inline-flex items-center gap-2 px-4 py-3 rounded-2xl bg-white/5 border border-white/8 hover:bg-white/3 transition">
+          <i data-lucide="download" class="w-5 h-5"></i> Download Resume
+        </a>
+      </div>
+
+      <div class="mt-8 rounded-2xl overflow-hidden border border-white/6">
+        <iframe src="https://raw.githubusercontent.com/mhmmdshadil/portfolio-website/main/Black%20White%20Minimalist%20CV%20Resume%20(4).pdf"
+                class="w-full h-[600px] bg-white/2"
+                title="Resume Preview"></iframe>
+      </div>
+    </section>
+
+    <!-- EXPERIENCE -->
+    <section id="experience" class="mt-16">
+      <h2 class="text-2xl font-bold">Experience</h2>
+      <p class="text-gray-400 mt-2">My roles and participation.</p>
       <div class="mt-6 grid md:grid-cols-2 gap-6">
-        <a href="#" target="_blank" class="block p-6 rounded-2xl bg-white/3 border border-white/6 backdrop-blur-sm hover:scale-[1.01] transition-shadow">
-          <div class="text-lg font-semibold">Student Result Manager</div>
-          <div class="text-gray-300 text-sm mt-1">Mini console app to store & show student marks with search & sort.</div>
-        </a>
-        <a href="#" target="_blank" class="block p-6 rounded-2xl bg-white/3 border border-white/6 backdrop-blur-sm hover:scale-[1.01] transition-shadow">
-          <div class="text-lg font-semibold">Data Structure Visualizer</div>
-          <div class="text-gray-300 text-sm mt-1">Web UI demonstrating stack, queue and linked list animations.</div>
-        </a>
-        <a href="#" target="_blank" class="block p-6 rounded-2xl bg-white/3 border border-white/6 backdrop-blur-sm hover:scale-[1.01] transition-shadow">
-          <div class="text-lg font-semibold">College Notes Hub</div>
-          <div class="text-gray-300 text-sm mt-1">Notes sharing UI with filters by subject and semester.</div>
-        </a>
-        <div class="p-6 rounded-2xl bg-white/4 border border-white/6 backdrop-blur-sm flex items-center justify-center">
-          <div class="text-center text-gray-300">
-            <div class="font-medium">More coming soon</div>
-            <div class="text-sm mt-1">Connect on GitHub to see updates.</div>
-          </div>
+
+        <div class="p-6 rounded-2xl bg-white/3 border border-white/6 backdrop-blur-sm">
+          <h3 class="font-semibold">Govt. Engineering College, Sreekrishnapuram</h3>
+          <ul class="text-sm text-gray-300 mt-3 space-y-1 list-disc list-inside">
+            <li>INVENTO — Documentation Team (2025)</li>
+            <li>ExcelSIOUR’25 — 3 Day LLM & Automation Workshop</li>
+            <li>Tinker Hub — Portfolio Bootcamp Participant</li>
+            <li>SIH — Internal Smart India Hackathon Participant</li>
+          </ul>
         </div>
+
+        <div class="p-6 rounded-2xl bg-white/3 border border-white/6 backdrop-blur-sm">
+          <h3 class="font-semibold">Design & Remote Roles</h3>
+          <ul class="text-sm text-gray-300 mt-3 space-y-1 list-disc list-inside">
+            <li>Poster Lead — Figma & Canva</li>
+            <li>Leaderboard Poster Designer</li>
+            <li>Remote PPT Designer</li>
+          </ul>
+        </div>
+
+      </div>
+    </section>
+
+    <!-- EDUCATION -->
+    <section id="education" class="mt-16">
+      <h2 class="text-2xl font-bold">Education</h2>
+      <p class="text-gray-400 mt-2">My academic journey.</p>
+      <div class="mt-6 grid md:grid-cols-2 gap-6">
+
+        <div class="p-6 rounded-2xl bg-white/3 border border-white/6 backdrop-blur-sm">
+          <h3 class="font-semibold">Information Technology</h3>
+          <p class="text-sm text-gray-300 mt-1">
+            Govt. Engineering College Sreekrishnapuram  
+            <span class="text-gray-400 block mt-2">2025 – Present</span>
+          </p>
+        </div>
+
+        <div class="p-6 rounded-2xl bg-white/3 border border-white/6 backdrop-blur-sm">
+          <h3 class="font-semibold">Biology Science</h3>
+          <p class="text-sm text-gray-300 mt-1">
+            GHSS Purathur — 2023 to 2024  
+            <span class="text-gray-400 block mt-2">2023 – 2024</span>
+          </p>
+        </div>
+
+        <div class="p-6 rounded-2xl bg-white/3 border border-white/6 backdrop-blur-sm">
+          <h3 class="font-semibold">School Level Education</h3>
+          <p class="text-sm text-gray-300 mt-1">
+            TIC Secondary School — 2022 Graduate
+            <span class="text-gray-400 block mt-2">2022</span>
+          </p>
+        </div>
+
       </div>
     </section>
 
     <!-- SKILLS -->
     <section id="skills" class="mt-16">
       <h2 class="text-2xl font-bold">Skills</h2>
-      <p class="text-gray-400 mt-2">Tools and languages I use.</p>
-      <div class="mt-6 flex flex-wrap gap-3">
-        <div class="px-4 py-2 rounded-full bg-white/4 border border-white/6 text-sm">HTML</div>
-        <div class="px-4 py-2 rounded-full bg-white/4 border border-white/6 text-sm">CSS / Tailwind</div>
-        <div class="px-4 py-2 rounded-full bg-white/4 border border-white/6 text-sm">JavaScript</div>
-        <div class="px-4 py-2 rounded-full bg-white/4 border border-white/6 text-sm">React</div>
-        <div class="px-4 py-2 rounded-full bg-white/4 border border-white/6 text-sm">Git & GitHub</div>
-        <div class="px-4 py-2 rounded-full bg-white/4 border border-white/6 text-sm">C</div>
-        <div class="px-4 py-2 rounded-full bg-white/4 border border-white/6 text-sm">Python</div>
+      <div class="mt-6 flex flex-wrap gap-3 text-sm">
+        <span class="px-4 py-2 rounded-full bg-white/4 border border-white/6">Typing Speed — 85 WPM</span>
+        <span class="px-4 py-2 rounded-full bg-white/4 border border-white/6">Computer Proficiency</span>
+        <span class="px-4 py-2 rounded-full bg-white/4 border border-white/6">Figma / UI Design</span>
+        <span class="px-4 py-2 rounded-full bg-white/4 border border-white/6">Python / Web Coding</span>
+        <span class="px-4 py-2 rounded-full bg-white/4 border border-white/6">Vibe-Coding</span>
+        <span class="px-4 py-2 rounded-full bg-white/4 border border-white/6">Git / GitHub</span>
+        <span class="px-4 py-2 rounded-full bg-white/4 border border-white/6">Discord Bots</span>
+        <span class="px-4 py-2 rounded-full bg-white/4 border border-white/6">Notion Dashboard</span>
+        <span class="px-4 py-2 rounded-full bg-white/4 border border-white/6">Server Automation</span>
       </div>
     </section>
 
     <!-- CONTACT -->
     <section id="contact" class="mt-16">
       <h2 class="text-2xl font-bold">Contact</h2>
-      <p class="text-gray-400 mt-2">Let's build something — reach out or follow me.</p>
       <div class="mt-6 grid md:grid-cols-3 gap-6">
-        <div class="p-6 rounded-2xl bg-white/3 border border-white/6 backdrop-blur-sm">
+
+        <div class="p-6 rounded-2xl bg-white/3 border border-white/6">
+          <div class="text-sm text-gray-300">Phone</div>
+          <div class="mt-2 font-medium">+91 98951 95654</div>
+        </div>
+
+        <div class="p-6 rounded-2xl bg-white/3 border border-white/6">
           <div class="text-sm text-gray-300">Email</div>
-          <a class="block mt-2 font-medium" href="mailto:muhammedshadilmp7@gmail.com">
+          <a href="mailto:muhammedshadilmp7@gmail.com" class="mt-2 block font-medium text-sm">
             muhammedshadilmp7@gmail.com
           </a>
         </div>
-        <div class="p-6 rounded-2xl bg-white/3 border border-white/6 backdrop-blur-sm">
-          <div class="text-sm text-gray-300">Instagram</div>
-          <a class="block mt-2 font-medium" href="https://www.instagram.com/mhmmd.shadil/" target="_blank">
-            @mhmmd.shadil
-          </a>
+
+        <div class="p-6 rounded-2xl bg-white/3 border border-white/6">
+          <div class="text-sm text-gray-300">Location</div>
+          <div class="mt-2 text-sm">Kerala, India</div>
         </div>
-        <div class="p-6 rounded-2xl bg-white/3 border border-white/6 backdrop-blur-sm">
-          <div class="text-sm text-gray-300">GitHub</div>
-          <a class="block mt-2 font-medium" href="https://github.com/mhmmdshadil" target="_blank">
-            mhmmdshadil
-          </a>
-        </div>
+
+      </div>
+
+      <div class="mt-6 flex gap-3 text-sm">
+        <a href="https://github.com/mhmmdshadil" target="_blank" class="inline-flex items-center gap-2 px-3 py-2 rounded-xl bg-white/4 border border-white/6">
+          <i data-lucide="github" class="w-4 h-4"></i> GitHub
+        </a>
+        <a href="https://www.instagram.com/mhmmd.shadil/" target="_blank" class="inline-flex items-center gap-2 px-3 py-2 rounded-xl bg-white/4 border border-white/6">
+          <i data-lucide="instagram" class="w-4 h-4"></i> Instagram
+        </a>
       </div>
     </section>
 
-    <!-- FOOTER -->
-    <footer class="mt-20 text-center text-gray-400">
-      <div class="flex items-center justify-center gap-4 text-sm">
-        <a href="https://github.com/mhmmdshadil" target="_blank" class="inline-flex items-center gap-2">
-          <i data-lucide="github" class="w-4 h-4"></i> GitHub
-        </a>
-        <a href="https://www.instagram.com/mhmmd.shadil/" target="_blank" class="inline-flex items-center gap-2">
-          <i data-lucide="instagram" class="w-4 h-4"></i> Instagram
-        </a>
-        <a href="mailto:muhammedshadilmp7@gmail.com" class="inline-flex items-center gap-2">
-          <i data-lucide="mail" class="w-4 h-4"></i> Email
-        </a>
-      </div>
-      <div class="mt-6 text-sm">© 2025 Muhammed Shadil MP. Designed with a glassy, iPhone-style UI.</div>
-    </footer>
   </main>
 
   <script>lucide.createIcons();</script>
-
 </body>
 </html>
-      
