Refactor index.html for improved structure and SEO
Updated the title and added a description meta tag. Improved the overall structure and navigation links.

--- a/index.html
+++ b/index.html
@@ -2,206 +2,242 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Muhammed Shadil Portfolio</title>
-  <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
-  <script src="https://unpkg.com/framer-motion@10/dist/framer-motion.umd.js"></script>
-  <script src="https://unpkg.com/lucide@latest"></script>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Muhammed Shadil — Portfolio</title>
+  <meta name="description" content="Muhammed Shadil — IT student (Kerala, India). Minimal, glassy portfolio with links and education details." />
+
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+
+  <link rel="stylesheet" href="styles.css" />
 </head>
-<body class="min-h-screen bg-gradient-to-b from-black via-[#06060a] to-[#0b0b0f] text-white font-sans">
 
-  <!-- NAVBAR -->
-  <header class="backdrop-blur-sm bg-white/3 border-b border-white/6">
-    <nav class="max-w-5xl mx-auto px-6 py-4 flex items-center justify-between">
-      <div class="flex items-center gap-4">
-        <div class="w-12 h-12 rounded-2xl bg-white/6 ring-1 ring-white/8 flex items-center justify-center text-xl font-semibold">S</div>
-        <div>
-          <div class="text-lg font-semibold">Muhammed</div>
-          <div class="text-xs text-gray-300">IT Student — 1st Year</div>
-        </div>
-      </div>
-      <div class="flex items-center gap-4">
-        <a href="#projects" class="text-sm hover:underline">Projects</a>
-        <a href="#experience" class="text-sm hover:underline">Experience</a>
-        <a href="#skills" class="text-sm hover:underline">Skills</a>
-        <a href="#education" class="text-sm hover:underline">Education</a>
-        <a href="#resume" class="text-sm hover:underline">Resume</a>
-      </div>
-    </nav>
-  </header>
+<body>
+  <div class="app">
+    <!-- Ambient background (dark + subtle glow) -->
+    <div class="bg">
+      <div class="bg-orb orb1"></div>
+      <div class="bg-orb orb2"></div>
+      <div class="bg-noise" aria-hidden="true"></div>
+    </div>
 
-  <!-- HERO SECTION -->
-  <main class="max-w-5xl mx-auto px-6 py-12">
-    <section class="grid md:grid-cols-2 gap-8 items-center">
-      <div class="space-y-6">
-        <div class="text-sm text-gray-300">Hi, my name is</div>
-        <h1 class="text-4xl md:text-5xl font-extrabold tracking-tight">
-          Muhammed Shadil MP
-        </h1>
-        <p class="text-gray-300 max-w-xl">
-          I’m an IT student passionate about minimal design, clean interfaces, and building meaningful digital tools. Whether coding, designing in Figma, or organizing workflows in Notion, I enjoy turning ideas into polished digital experiences.
-        </p>
-
-        <div class="flex items-center gap-4">
-          <a href="https://github.com/mhmmdshadil" target="_blank" class="inline-flex items-center gap-3 px-5 py-3 rounded-2xl bg-white/6 border border-white/8 hover:translate-y-[-2px] transition-transform">
-            <i data-lucide="github" class="w-4 h-4"></i> GitHub
-          </a>
-          <a href="mailto:muhammedshadilmp7@gmail.com" class="inline-flex items-center gap-3 px-5 py-3 rounded-2xl bg-transparent border border-white/8 hover:bg-white/3 transition">
-            <i data-lucide="mail" class="w-4 h-4"></i> Email
-          </a>
-          <a href="#resume" class="inline-flex items-center gap-3 px-5 py-3 rounded-2xl bg-white/6 border border-white/8 hover:translate-y-[-2px] transition-transform">
-            <i data-lucide="file-text" class="w-4 h-4"></i> Resume
-          </a>
+    <!-- Top bar -->
+    <header class="topbar">
+      <div class="brand">
+        <div class="mark" aria-hidden="true">⌁</div>
+        <div class="brand-text">
+          <div class="name">Muhammed Shadil <span class="tag">MP</span></div>
+          <div class="sub">IT Student · Kerala, India</div>
         </div>
       </div>
 
-      <div class="flex items-center justify-center">
-        <div class="w-72 h-72 rounded-3xl bg-gradient-to-tr from-white/3 to-white/5 ring-1 ring-white/6 backdrop-blur-lg flex flex-col items-center justify-center p-6">
-          <img src="https://raw.githubusercontent.com/mhmmdshadil/portfolio-website/main/215467458.jpg" 
-               alt="Profile"
-               class="w-32 h-32 rounded-2xl object-cover shadow-md ring-1 ring-white/8"/>
-          <div class="mt-4 text-center">
-            <div class="font-semibold">Muhammed Shadil MP</div>
-            <div class="text-xs text-gray-300">IT — Govt. Engineering College Sreekrishnapuram</div>
-            <div class="text-xs text-gray-400 mt-1">Kerala, India</div>
+      <nav class="nav" aria-label="Primary">
+        <a href="#home" class="nav-link active">Home</a>
+        <a href="#about" class="nav-link">About</a>
+        <a href="#skills" class="nav-link">Skills</a>
+        <a href="#education" class="nav-link">Education</a>
+        <a href="#links" class="nav-link">Links</a>
+      </nav>
+      <button class="icon-btn" id="menuBtn" aria-label="Open menu" aria-expanded="false">
+        <span></span><span></span>
+      </button>
+    </header>
+
+    <!-- Mobile menu -->
+    <aside class="sheet" id="mobileMenu" aria-hidden="true">
+      <div class="sheet-inner">
+        <div class="sheet-head">
+          <div class="sheet-title">Navigate</div>
+          <button class="icon-btn" id="closeMenu" aria-label="Close menu">
+            <span></span><span></span>
+          </button>
+        </div>
+        <div class="sheet-links">
+          <a href="#home" class="sheet-link">Home</a>
+          <a href="#about" class="sheet-link">About</a>
+          <a href="#skills" class="sheet-link">Skills</a>
+          <a href="#education" class="sheet-link">Education</a>
+          <a href="#links" class="sheet-link">Links</a>
+        </div>
+      </div>
+    </aside>
+
+    <!-- MAIN -->
+    <main>
+      <!-- HOME / HERO -->
+      <section id="home" class="section">
+        <div class="grid hero">
+          <div class="panel hero-panel">
+            <div class="mini-row">
+              <span class="pill">Born: 21 May 2006</span>
+              <span class="pill">Discord: mhmmd.shadil</span>
+            </div>
+
+            <h1 class="title">Building clean digital experiences.</h1>
+            <p class="lead">
+              A minimal, glassy portfolio built around what I actually do: design with Figma, craft tidy workflows
+              in Notion, and build solid community spaces with Discord servers—while keeping everything simple and usable.
+            </p>
+
+            <div class="cta-row">
+              <a class="btn" href="#links">Open my links</a>
+              <a class="btn btn-secondary" href="#education">See education</a>
+            </div>
+          </div>
+
+          <div class="panel media-panel" aria-label="Hero visual">
+            <div class="media-wrap">
+              <img src="assets/hero.png" alt="Portfolio hero visual" loading="lazy" />
+            </div>
           </div>
         </div>
-      </div>
-    </section>
+      </section>
 
-    <!-- RESUME SECTION -->
-    <section id="resume" class="mt-16">
-      <h2 class="text-2xl font-bold">Resume</h2>
-      <p class="text-gray-400 mt-2">View or download my full resume.</p>
-
-      <div class="mt-6">
-        <a href="https://raw.githubusercontent.com/mhmmdshadil/portfolio-website/main/Black%20White%20Minimalist%20CV%20Resume%20(4).pdf" 
-           download 
-           class="inline-flex items-center gap-2 px-4 py-3 rounded-2xl bg-white/5 border border-white/8 hover:bg-white/3 transition">
-          <i data-lucide="download" class="w-5 h-5"></i> Download Resume
-        </a>
-      </div>
-
-      <div class="mt-8 rounded-2xl overflow-hidden border border-white/6">
-        <iframe src="https://raw.githubusercontent.com/mhmmdshadil/portfolio-website/main/Black%20White%20Minimalist%20CV%20Resume%20(4).pdf"
-                class="w-full h-[600px] bg-white/2"
-                title="Resume Preview"></iframe>
-      </div>
-    </section>
-
-    <!-- EXPERIENCE -->
-    <section id="experience" class="mt-16">
-      <h2 class="text-2xl font-bold">Experience</h2>
-      <p class="text-gray-400 mt-2">My roles and participation.</p>
-      <div class="mt-6 grid md:grid-cols-2 gap-6">
-
-        <div class="p-6 rounded-2xl bg-white/3 border border-white/6 backdrop-blur-sm">
-          <h3 class="font-semibold">Govt. Engineering College, Sreekrishnapuram</h3>
-          <ul class="text-sm text-gray-300 mt-3 space-y-1 list-disc list-inside">
-            <li>INVENTO — Documentation Team (2025)</li>
-            <li>ExcelSIOUR’25 — 3 Day LLM & Automation Workshop</li>
-            <li>Tinker Hub — Portfolio Bootcamp Participant</li>
-            <li>SIH — Internal Smart India Hackathon Participant</li>
-          </ul>
+      <!-- ABOUT -->
+      <section id="about" class="section">
+        <div class="section-head">
+          <h2 class="h2">About me</h2>
+          <p class="section-sub">A compact intro—designed to feel calm, modern, and straightforward.</p>
         </div>
 
-        <div class="p-6 rounded-2xl bg-white/3 border border-white/6 backdrop-blur-sm">
-          <h3 class="font-semibold">Design & Remote Roles</h3>
-          <ul class="text-sm text-gray-300 mt-3 space-y-1 list-disc list-inside">
-            <li>Poster Lead — Figma & Canva</li>
-            <li>Leaderboard Poster Designer</li>
-            <li>Remote PPT Designer</li>
-          </ul>
+        <div class="grid two">
+          <div class="panel">
+            <h3 class="h3">What I’m into</h3>
+            <p class="text">
+              I’m an IT student passionate about minimal design, clean interfaces, and
+              building small but meaningful digital tools. Whether I’m coding, designing
+              in Figma, or organizing workflows on Notion, I love turning simple ideas
+              into polished, aesthetic digital experiences that help teams and
+              communities work better.
+            </p>
+          </div>
+          <div class="panel">
+            <h3 class="h3">Quick details</h3>
+            <ul class="list">
+              <li><span class="k">Name</span><span class="v">Muhammed Shadil</span></li>
+              <li><span class="k">Role</span><span class="v">IT Student</span></li>
+              <li><span class="k">Location</span><span class="v">Kerala, India</span></li>
+              <li><span class="k">Email</span><span class="v">muhammedshadilmp7@gmail.com</span></li>
+            </ul>
+          </div>
+        </div>
+      </section>
+
+      <!-- SKILLS -->
+      <section id="skills" class="section">
+        <div class="section-head">
+          <h2 class="h2">Skills (what I can deliver)</h2>
+          <p class="section-sub">Practical abilities I use to ship clean, usable digital work.</p>
         </div>
 
-      </div>
-    </section>
+        <div class="grid cards">
+          <div class="card">
+            <div class="card-top">
+              <div class="card-icon">⌨️</div>
+              <div>
+                <div class="card-title">Typing</div>
+                <div class="card-desc">Up to <b>85 WPM</b> (fast, accurate input for work flows).</div>
+              </div>
+            </div>
+          </div>
+          <div class="card">
+            <div class="card-top">
+              <div class="card-icon">🎨</div>
+              <div>
+                <div class="card-title">Figma design</div>
+                <div class="card-desc">Poster & visual design with a minimal, clean finish.</div>
+              </div>
+            </div>
+          </div>
+          <div class="card">
+            <div class="card-top">
+              <div class="card-icon">🧩</div>
+              <div>
+                <div class="card-title">Discord builds</div>
+                <div class="card-desc">Structured servers that feel organized and easy to use.</div>
+              </div>
+            </div>
+          </div>
+          <div class="card">
+            <div class="card-top">
+              <div class="card-icon">📓</div>
+              <div>
+                <div class="card-title">Notion systems</div>
+                <div class="card-desc">Clean pages and workflows for teams and projects.</div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
 
-    <!-- EDUCATION -->
-    <section id="education" class="mt-16">
-      <h2 class="text-2xl font-bold">Education</h2>
-      <p class="text-gray-400 mt-2">My academic journey.</p>
-      <div class="mt-6 grid md:grid-cols-2 gap-6">
-
-        <div class="p-6 rounded-2xl bg-white/3 border border-white/6 backdrop-blur-sm">
-          <h3 class="font-semibold">Information Technology</h3>
-          <p class="text-sm text-gray-300 mt-1">
-            Govt. Engineering College Sreekrishnapuram  
-            <span class="text-gray-400 block mt-2">2025 – Present</span>
-          </p>
+      <!-- EDUCATION (from your provided image) -->
+      <section id="education" class="section">
+        <div class="section-head">
+          <h2 class="h2">Education</h2>
+          <p class="section-sub">Copied directly from your education card (no extra additions).</p>
         </div>
 
-        <div class="p-6 rounded-2xl bg-white/3 border border-white/6 backdrop-blur-sm">
-          <h3 class="font-semibold">Biology Science</h3>
-          <p class="text-sm text-gray-300 mt-1">
-            GHSS Purathur — 2023 to 2024  
-            <span class="text-gray-400 block mt-2">2023 – 2024</span>
-          </p>
+        <div class="grid edu">
+          <div class="panel edu-panel">
+            <div class="edu-block">
+              <div class="edu-label">Education</div>
+              <div class="edu-item">
+                <div class="edu-title">GOVT. ENGINEERING COLLEGE SREEKRISHNAPURAM</div>
+                <div class="edu-line">Information Technology · <span class="muted">2025–Present</span></div>
+              </div>
+              <div class="edu-item">
+                <div class="edu-title">GHSS PURATHUR</div>
+                <div class="edu-line">Biology Science · <span class="muted">2023–2024</span></div>
+              </div>
+              <div class="edu-item">
+                <div class="edu-title">TIC SECONDARY SCHOOL</div>
+                <div class="edu-line">School Level Education · <span class="muted">2022 Graduate</span></div>
+              </div>
+            </div>
+          </div>
+
+          <div class="panel media-panel" aria-label="Education card">
+            <div class="media-wrap">
+              <img src="assets/education.png" alt="Education card" loading="lazy" />
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <!-- LINKS -->
+      <section id="links" class="section">
+        <div class="section-head">
+          <h2 class="h2">Links</h2>
+          <p class="section-sub">Everything you can use to reach me or see my work.</p>
         </div>
 
-        <div class="p-6 rounded-2xl bg-white/3 border border-white/6 backdrop-blur-sm">
-          <h3 class="font-semibold">School Level Education</h3>
-          <p class="text-sm text-gray-300 mt-1">
-            TIC Secondary School — 2022 Graduate
-            <span class="text-gray-400 block mt-2">2022</span>
-          </p>
-        </div>
-
-      </div>
-    </section>
-
-    <!-- SKILLS -->
-    <section id="skills" class="mt-16">
-      <h2 class="text-2xl font-bold">Skills</h2>
-      <div class="mt-6 flex flex-wrap gap-3 text-sm">
-        <span class="px-4 py-2 rounded-full bg-white/4 border border-white/6">Typing Speed — 85 WPM</span>
-        <span class="px-4 py-2 rounded-full bg-white/4 border border-white/6">Computer Proficiency</span>
-        <span class="px-4 py-2 rounded-full bg-white/4 border border-white/6">Figma / UI Design</span>
-        <span class="px-4 py-2 rounded-full bg-white/4 border border-white/6">Python / Web Coding</span>
-        <span class="px-4 py-2 rounded-full bg-white/4 border border-white/6">Vibe-Coding</span>
-        <span class="px-4 py-2 rounded-full bg-white/4 border border-white/6">Git / GitHub</span>
-        <span class="px-4 py-2 rounded-full bg-white/4 border border-white/6">Discord Bots</span>
-        <span class="px-4 py-2 rounded-full bg-white/4 border border-white/6">Notion Dashboard</span>
-        <span class="px-4 py-2 rounded-full bg-white/4 border border-white/6">Server Automation</span>
-      </div>
-    </section>
-
-    <!-- CONTACT -->
-    <section id="contact" class="mt-16">
-      <h2 class="text-2xl font-bold">Contact</h2>
-      <div class="mt-6 grid md:grid-cols-3 gap-6">
-
-        <div class="p-6 rounded-2xl bg-white/3 border border-white/6">
-          <div class="text-sm text-gray-300">Phone</div>
-          <div class="mt-2 font-medium">+91 98951 95654</div>
-        </div>
-
-        <div class="p-6 rounded-2xl bg-white/3 border border-white/6">
-          <div class="text-sm text-gray-300">Email</div>
-          <a href="mailto:muhammedshadilmp7@gmail.com" class="mt-2 block font-medium text-sm">
-            muhammedshadilmp7@gmail.com
+        <div class="grid links">
+          <a class="link-card" href="https://github.com/mhmmdshadil" target="_blank" rel="noopener noreferrer">
+            <div class="link-title">GitHub</div>
+            <div class="link-desc">Code profile and repositories.</div>
           </a>
+          <a class="link-card" href="https://www.linkedin.com/in/mhmmdshadil/" target="_blank" rel="noopener noreferrer">
+            <div class="link-title">LinkedIn</div>
+            <div class="link-desc">Professional profile and updates.</div>
+          </a>
+          <a class="link-card" href="https://www.instagram.com/mhmmd.shadil/" target="_blank" rel="noopener noreferrer">
+            <div class="link-title">Instagram</div>
+            <div class="link-desc">Personal updates (as shared by you).</div>
+          </a>
+          <button class="link-card" id="copyEmail" type="button">
+            <div class="link-title">Email</div>
+            <div class="link-desc">muhammedshadilmp7@gmail.com (tap to copy)</div>
+          </button>
         </div>
+      </section>
+    </main>
 
-        <div class="p-6 rounded-2xl bg-white/3 border border-white/6">
-          <div class="text-sm text-gray-300">Location</div>
-          <div class="mt-2 text-sm">Kerala, India</div>
-        </div>
+    <footer class="footer">
+      <div class="footer-line">© <span id="year"></span> Muhammed Shadil · Minimal + glassy UI</div>
+    </footer>
+  </div>
 
-      </div>
-
-      <div class="mt-6 flex gap-3 text-sm">
-        <a href="https://github.com/mhmmdshadil" target="_blank" class="inline-flex items-center gap-2 px-3 py-2 rounded-xl bg-white/4 border border-white/6">
-          <i data-lucide="github" class="w-4 h-4"></i> GitHub
-        </a>
-        <a href="https://www.instagram.com/mhmmd.shadil/" target="_blank" class="inline-flex items-center gap-2 px-3 py-2 rounded-xl bg-white/4 border border-white/6">
-          <i data-lucide="instagram" class="w-4 h-4"></i> Instagram
-        </a>
-      </div>
-    </section>
-
-  </main>
-
-  <script>lucide.createIcons();</script>
+  <script src="script.js"></script>
 </body>
 </html>
