Update personal branding and descriptions in index.html

--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
         </div>
         <div class="brand-text">
           <div class="name">
-            Muhammed Shadil
-            <span class="tag">IT · MP</span>
+            Muhammed Shadil MP
+            <span class="tag">IT</span>
           </div>
           <div class="sub">Building calm, minimal digital spaces</div>
         </div>
@@ -161,7 +161,7 @@
         <div class="section-head">
           <h2 class="h2">Skills</h2>
           <p class="section-sub">
-            Practical, everyday skills used to ship work that feels premium but stays minimal.
+            Practical, everyday skills used to improve my workflow
           </p>
         </div>
 
@@ -221,7 +221,7 @@
         <div class="section-head">
           <h2 class="h2">Education</h2>
           <p class="section-sub">
-            A straightforward view of education history, arranged like a clean vertical timeline.
+           The path i took to reach here
           </p>
         </div>
 
@@ -275,12 +275,12 @@
 
           <a class="link-card" href="https://www.linkedin.com/in/mhmmdshadil/" target="_blank" rel="noopener noreferrer">
             <div class="link-title">LinkedIn</div>
-            <div class="link-desc">Professional profile and updates.</div>
+            <div class="link-desc">Connect with me here.</div>
           </a>
 
           <a class="link-card" href="https://www.instagram.com/mhmmd.shadil/" target="_blank" rel="noopener noreferrer">
             <div class="link-title">Instagram</div>
-            <div class="link-desc">Snapshots and personal updates.</div>
+            <div class="link-desc">Life updates</div>
           </a>
 
           <button class="link-card link-card-ghost" id="copyEmail" type="button">
@@ -293,7 +293,7 @@
 
     <footer class="footer">
       <div class="footer-line">
-        © <span id="year"></span> Muhammed Shadil · Dark, minimal portfolio
+        © <span id="year"></span> Muhammed Shadil 
       </div>
     </footer>
   </div>
