Update content in the About section of index.html
Revised the 'About' section for clarity and conciseness.

--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
         <div class="section-head">
           <h2 class="h2">About</h2>
           <p class="section-sub">
-            A focused overview of what drives the work: calm interfaces, simple flows, and digital spaces that feel deliberate instead of noisy.
+          Calm interfaces. Simple flows. Digital spaces that feel intentional, not noisy.
           </p>
         </div>
 
@@ -137,10 +137,8 @@
           <div class="panel content-panel">
             <h3 class="h3">What I do</h3>
             <p class="text">
-              As an IT student, the goal is to blend solid structure with visual clarity: layouts that look premium but still stay practical and light. Whether it is a Notion setup, a Discord server, or a simple landing page, the priority is always clean hierarchy, less clutter, and smooth interaction.
-            </p>
+As an IT student, the focus is on clean structure with clear hierarchy, light layouts, and smooth interaction. Interfaces usually lean dark and glassy with soft glows and crisp typography, so they feel modern and premium without ever becoming heavy.            </p>
             <p class="text">
-              Most of the work centers on dark, glassy interfaces with soft glows and clear typography, making them feel modern without being overwhelming.
             </p>
           </div>
 
