Update degree title from 'Bachelor' to 'Btech'

--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@ As an IT student, the focus is on clean structure with clear hierarchy, light la
               <div class="edu-item">
                 <div class="edu-year-pill">2025 – Present</div>
                 <div class="edu-title">GOVT. ENGINEERING COLLEGE SREEKRISHNAPURAM</div>
-                <div class="edu-line">Bachelor in Information Technology</div>
+                <div class="edu-line">Btech in Information Technology</div>
               </div>
 
               <div class="edu-item">
